<resources>
    <string name="app_name">SuperSmash Character Quiz</string>
    <string name="choose">Choose owner name</string>
</resources>
